# django-rest-framework-bulk

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.rst  Justfile  README.rst  pyproject.toml
.github/workflows/: ci.yml  pre-commit.yml
rest_framework_bulk/: __init__.py  generics.py  mixins.py  routes.py  serializers.py
rest_framework_bulk/drf3/: mixins.py  serializers.py
rest_framework_bulk/tests/: test_correctness.py  test_generics.py  test_refactoring.py
rest_framework_bulk/tests/simple_app/: models.py  serializers.py  urls.py  views.py
tests/: manage.py  settings.py
