[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "djangorestframework-bulk"
version = "1.0.0"
description = "Django REST Framework bulk CRUD view mixins"
readme = "README.rst"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [{name = "Miroslav Shubernetskiy"}]
keywords = ["django", "rest", "drf", "bulk"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Django",
  "Framework :: Django :: 5",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "Django>=5.0",
  "djangorestframework>=3.14",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "coverage>=7",
  "pre-commit>=3.8",
  "build>=1.2",
  "twine>=5.1",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.setuptools.packages.find]
where = ["."]
include = ["rest_framework_bulk*"]
